--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>體驗營-任務二切版</title>
-    <link rel="stylesheet" href="css_reset.css" />
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0"
     />
-    <link rel="stylesheet" href="style_sm.css" />
+    <link rel="stylesheet" href="css_reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css_rwd.css" />
   </head>
   <body>
     <div class="wrap">
       <header class="header">
         <div class="header-content container">
-          <img
-            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/a0deba953fc5322a513e717e7c24b25fa3d946f8/2024%20web-camp/logo.svg"
-            alt="logo"
-          />
+          <a href="#"><img src="./img/logo.svg" class="logo" alt="logo" /></a>
+          <div class="hamburger">
+            <img src="./img/menu.svg" class="btn active" alt="開啟" />
+            <img src="./img/close.svg" class="btn close" alt="關閉" />
+          </div>
           <ul class="header-nav">
             <li><a class="active" href="#">首頁</a></li>
             <li><a href="#">作品集</a></li>
@@ -29,61 +29,25 @@
             <li><a href="#">聯絡我</a></li>
           </ul>
         </div>
-      </header>
-
-      <header class="header-sm">
-        <div class="header-sm-content">
-          <img src="./img/logo.svg" alt="logo" />
-          <div class="hamburger">
-            <img src="./img/menu.svg" class="btn active" alt="開啟" />
-            <img src="./img/close.svg" class="btn close" alt="關閉" />
-          </div>
-        </div>
-        <ul class="header-sm-nav close">
-          <li><a class="click" href="#">首頁</a></li>
-          <li><a href="#">作品集</a></li>
-          <li><a href="#">服務項目</a></li>
-          <li><a href="#">部落格</a></li>
-          <li><a href="#">聯絡我</a></li>
-        </ul>
         <div class="overlay"></div>
-        <!-- 新增遮罩層 -->
       </header>
 
-      <section class="hero">
-        <div class="hero-content">
-          <div class="hero-content-box">
+      <section class="banner">
+        <div class="banner-content">
+          <div class="banner-content-box">
             <h1>Hi！我是 Noel</h1>
             <p>
-              具有 10 年經驗的 <strong>資深 UI 設計師</strong> 兼
-              <strong>前端工程師</strong>
+              具有 10 年經驗的<span class="next-line"></span>
+              <strong>資深 UI 設計師</strong> 兼 <strong>前端工程師</strong
+              ><span class="next-line"></span>
             </p>
-            <p>技術雙修並行，熱衷於優化使用者的網頁體驗</p>
-            <p class="en">WEB DEVELOPMENT / BRANDING / UI / UX / APP DESIGN</p>
-            <ul>
-              <li><img src="./img/instagram.svg" alt="IG" /></li>
-              <li><img src="./img/facebook.svg" alt="FB" /></li>
-              <li><img src="./img/youtube.svg" alt="YT" /></li>
-            </ul>
-          </div>
-        </div>
-        <img src="./img/hero-lg.png" alt="hero" />
-      </section>
-
-      <section class="hero-sm">
-        <img src="./img/hero-sm.png" alt="hero" />
-        <div class="hero-content-sm">
-          <div class="hero-content-box-sm">
-            <h1>Hi！我是 Noel</h1>
             <p>
-              具有 10 年經驗的<br /><strong>資深 UI 設計師</strong> 兼<strong
-                >前端工程師</strong
-              >
+              技術雙修並行，<span class="next-line"></span
+              >熱衷於優化使用者的網頁體驗
             </p>
-            <p>技術雙修並行，<br />熱衷於優化使用者的網頁體驗</p>
             <p class="en">
-              WEB DEVELOPMENT / BRANDING /<br />
-              UI / UX / APP DESIGN
+              WEB DEVELOPMENT / BRANDING / <span class="next-line"></span>UI /
+              UX / APP DESIGN
             </p>
             <ul>
               <li><img src="./img/instagram.svg" alt="IG" /></li>
@@ -92,13 +56,17 @@
             </ul>
           </div>
         </div>
+        <img src="./img/hero-lg.png" class="banner-img-lg" alt="banner" />
+        <img src="./img/hero-sm.png" class="banner-img-sm" alt="banner" />
       </section>
 
       <section class="works">
         <div class="title-lg">
-          <img src="./img/title-deco-left-lg.png" alt="title-deco-left" />
-          <h2>作品介紹</h2>
-          <img src="./img/title-deco-right-lg.png" alt="title-deco-right" />
+          <h2>
+            <span class="deco-line deco-left"></span>作品介紹<span
+              class="deco-line deco-right"
+            ></span>
+          </h2>
         </div>
         <div class="works-content">
           <div class="travel">
@@ -123,59 +91,6 @@
               </div>
             </div>
           </div>
-          <div class="app">
-            <div class="app-content">
-              <div class="introduction">
-                <div class="content">
-                  <h3>理財APP</h3>
-                  <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
-                  <ul>
-                    <li>APP設計</li>
-                    <li>iOS</li>
-                    <li>React</li>
-                  </ul>
-                </div>
-                <div class="btn">
-                  <a href=""
-                    >完整介紹
-                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="art">
-            <div class="art-content container">
-              <img src="./img/homepage-work3.png" alt="homepage-work3" />
-              <div class="introduction">
-                <div class="content">
-                  <h3>醫美診所官網</h3>
-                  <p>永保青春的秘密，從粹究開始</p>
-                  <ul>
-                    <li>網頁設計</li>
-                    <li>響應式設計</li>
-                    <li>ＷordPress</li>
-                  </ul>
-                </div>
-                <div class="btn">
-                  <a href=""
-                    >完整介紹
-                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="works-sm">
-        <div class="title-sm">
-          <img src="./img/title-deco-left-sm.png" alt="title-deco-left" />
-          <h2>作品介紹</h2>
-          <img src="./img/title-deco-right-sm.png" alt="title-deco-right" />
-        </div>
-        <div class="works-content-sm">
           <div class="travel-content-sm">
             <div class="travel-content-sm-bg">
               <img src="./img/homepage-work1-sm.png" alt="homepage-work1" />
@@ -200,6 +115,27 @@
             </div>
           </div>
 
+          <div class="app">
+            <div class="app-content">
+              <div class="introduction">
+                <div class="content">
+                  <h3>理財APP</h3>
+                  <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
+                  <ul>
+                    <li>APP設計</li>
+                    <li>iOS</li>
+                    <li>React</li>
+                  </ul>
+                </div>
+                <div class="btn">
+                  <a href=""
+                    >完整介紹
+                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="app-content-sm">
             <div class="app-content-sm-bg"></div>
 
@@ -222,6 +158,28 @@
             </div>
           </div>
 
+          <div class="art">
+            <div class="art-content container">
+              <img src="./img/homepage-work3.png" alt="homepage-work3" />
+              <div class="introduction">
+                <div class="content">
+                  <h3>醫美診所官網</h3>
+                  <p>永保青春的秘密，從粹究開始</p>
+                  <ul>
+                    <li>網頁設計</li>
+                    <li>響應式設計</li>
+                    <li>ＷordPress</li>
+                  </ul>
+                </div>
+                <div class="btn">
+                  <a href=""
+                    >完整介紹
+                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="art-content-sm">
             <div class="art-content-sm-bg">
               <img src="./img/homepage-work3-sm.png" alt="homepage-work3" />
@@ -249,14 +207,11 @@
 
       <section class="services">
         <div class="title-lg">
-          <img src="./img/title-deco-left-lg.png" alt="title-deco-left" />
-          <h2>服務項目</h2>
-          <img src="./img/title-deco-right-lg.png" alt="title-deco-right" />
-        </div>
-        <div class="title-sm">
-          <img src="./img/title-deco-left-sm.png" alt="title-deco-left" />
-          <h2>服務項目</h2>
-          <img src="./img/title-deco-right-sm.png" alt="title-deco-right" />
+          <h2>
+            <span class="deco-line deco-left"></span>服務項目<span
+              class="deco-line deco-right"
+            ></span>
+          </h2>
         </div>
         <ul class="content container">
           <li>
@@ -289,14 +244,11 @@
 
       <section class="articles">
         <div class="title-lg">
-          <img src="./img/title-deco-left-lg.png" alt="title-deco-left" />
-          <h2>精選文章</h2>
-          <img src="./img/title-deco-right-lg.png" alt="title-deco-right" />
-        </div>
-        <div class="title-sm">
-          <img src="./img/title-deco-left-sm.png" alt="title-deco-left" />
-          <h2>精選文章</h2>
-          <img src="./img/title-deco-right-sm.png" alt="title-deco-right" />
+          <h2>
+            <span class="deco-line deco-left"></span>精選文章<span
+              class="deco-line deco-right"
+            ></span>
+          </h2>
         </div>
         <ul class="articles-content container">
           <li>
