--- a/index.html
+++ b/index.html
@@ -8,95 +8,68 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0"
     />
-    <link rel="stylesheet" href="css_reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css_rwd.css" />
   </head>
   <body>
-    <div class="wrap">
-      <header class="header">
-        <div class="header-content container">
-          <a href="#"><img src="./img/logo.svg" class="logo" alt="logo" /></a>
-          <div class="hamburger">
-            <img src="./img/menu.svg" class="btn active" alt="開啟" />
-            <img src="./img/close.svg" class="btn close" alt="關閉" />
-          </div>
-          <ul class="header-nav">
-            <li><a class="active" href="#">首頁</a></li>
-            <li><a href="#">作品集</a></li>
-            <li><a href="#">服務項目</a></li>
-            <li><a href="#">部落格</a></li>
-            <li><a href="#">聯絡我</a></li>
+    <header class="header">
+      <div class="header-content container">
+        <a href="#"><img src="./img/logo.svg" class="logo" alt="logo" /></a>
+        <div class="hamburger">
+          <img src="./img/menu.svg" class="btn active" alt="開啟" />
+          <img src="./img/close.svg" class="btn close" alt="關閉" />
+        </div>
+        <ul class="header-nav">
+          <li><a class="active" href="#">首頁</a></li>
+          <li><a href="#">作品集</a></li>
+          <li><a href="#">服務項目</a></li>
+          <li><a href="#">部落格</a></li>
+          <li><a href="#">聯絡我</a></li>
+        </ul>
+      </div>
+      <div class="overlay"></div>
+    </header>
+
+    <section class="banner">
+      <div class="banner-content">
+        <div class="banner-content-box">
+          <h1>Hi！我是 Noel</h1>
+          <p>
+            具有 10 年經驗的<span class="next-line"></span>
+            <strong>資深 UI 設計師</strong> 兼 <strong>前端工程師</strong
+            ><span class="next-line"></span>
+          </p>
+          <p>
+            技術雙修並行，<span class="next-line"></span
+            >熱衷於優化使用者的網頁體驗
+          </p>
+          <p class="en">
+            WEB DEVELOPMENT / BRANDING / <span class="next-line"></span>UI / UX
+            / APP DESIGN
+          </p>
+          <ul>
+            <li><img src="./img/instagram.svg" alt="IG" /></li>
+            <li><img src="./img/facebook.svg" alt="FB" /></li>
+            <li><img src="./img/youtube.svg" alt="YT" /></li>
           </ul>
         </div>
-        <div class="overlay"></div>
-      </header>
+      </div>
+      <img src="./img/hero-lg.png" class="banner-img-lg" alt="banner" />
+      <img src="./img/hero-sm.png" class="banner-img-sm" alt="banner" />
+    </section>
 
-      <section class="banner">
-        <div class="banner-content">
-          <div class="banner-content-box">
-            <h1>Hi！我是 Noel</h1>
-            <p>
-              具有 10 年經驗的<span class="next-line"></span>
-              <strong>資深 UI 設計師</strong> 兼 <strong>前端工程師</strong
-              ><span class="next-line"></span>
-            </p>
-            <p>
-              技術雙修並行，<span class="next-line"></span
-              >熱衷於優化使用者的網頁體驗
-            </p>
-            <p class="en">
-              WEB DEVELOPMENT / BRANDING / <span class="next-line"></span>UI /
-              UX / APP DESIGN
-            </p>
-            <ul>
-              <li><img src="./img/instagram.svg" alt="IG" /></li>
-              <li><img src="./img/facebook.svg" alt="FB" /></li>
-              <li><img src="./img/youtube.svg" alt="YT" /></li>
-            </ul>
-          </div>
-        </div>
-        <img src="./img/hero-lg.png" class="banner-img-lg" alt="banner" />
-        <img src="./img/hero-sm.png" class="banner-img-sm" alt="banner" />
-      </section>
-
-      <section class="works">
-        <div class="title-lg">
-          <h2>
-            <span class="deco-line deco-left"></span>作品介紹<span
-              class="deco-line deco-right"
-            ></span>
-          </h2>
-        </div>
-        <div class="works-content">
-          <div class="travel">
-            <div class="travel-content container">
-              <img src="./img/homepage-work1.png" alt="homepage-work1" />
-              <div class="introduction">
-                <div class="content">
-                  <h3>星際旅行訂票平台</h3>
-                  <p>悠遊宇宙的夢想，從這裡開始實現</p>
-                  <ul>
-                    <li>網頁設計</li>
-                    <li>響應式設計</li>
-                    <li>Bootstrap</li>
-                  </ul>
-                </div>
-                <div class="btn">
-                  <a href=""
-                    >完整介紹
-                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="travel-content-sm">
-            <div class="travel-content-sm-bg">
-              <img src="./img/homepage-work1-sm.png" alt="homepage-work1" />
-            </div>
-
-            <div class="introduction-sm">
+    <section class="works">
+      <div class="title-lg">
+        <h2>
+          <span class="deco-line deco-left"></span>作品介紹<span
+            class="deco-line deco-right"
+          ></span>
+        </h2>
+      </div>
+      <div class="works-content">
+        <div class="travel">
+          <div class="travel-content container">
+            <img src="./img/homepage-work1.png" alt="homepage-work1" />
+            <div class="introduction">
               <div class="content">
                 <h3>星際旅行訂票平台</h3>
                 <p>悠遊宇宙的夢想，從這裡開始實現</p>
@@ -114,32 +87,34 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="travel-content-sm">
+          <div class="travel-content-sm-bg">
+            <img src="./img/homepage-work1-sm.png" alt="homepage-work1" />
+          </div>
 
-          <div class="app">
-            <div class="app-content">
-              <div class="introduction">
-                <div class="content">
-                  <h3>理財APP</h3>
-                  <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
-                  <ul>
-                    <li>APP設計</li>
-                    <li>iOS</li>
-                    <li>React</li>
-                  </ul>
-                </div>
-                <div class="btn">
-                  <a href=""
-                    >完整介紹
-                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-                  </a>
-                </div>
-              </div>
+          <div class="introduction-sm">
+            <div class="content">
+              <h3>星際旅行訂票平台</h3>
+              <p>悠遊宇宙的夢想，從這裡開始實現</p>
+              <ul>
+                <li>網頁設計</li>
+                <li>響應式設計</li>
+                <li>Bootstrap</li>
+              </ul>
+            </div>
+            <div class="btn">
+              <a href=""
+                >完整介紹
+                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+              </a>
             </div>
           </div>
-          <div class="app-content-sm">
-            <div class="app-content-sm-bg"></div>
+        </div>
 
-            <div class="introduction-sm">
+        <div class="app">
+          <div class="app-content">
+            <div class="introduction">
               <div class="content">
                 <h3>理財APP</h3>
                 <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
@@ -157,34 +132,33 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="app-content-sm">
+          <div class="app-content-sm-bg"></div>
 
-          <div class="art">
-            <div class="art-content container">
-              <img src="./img/homepage-work3.png" alt="homepage-work3" />
-              <div class="introduction">
-                <div class="content">
-                  <h3>醫美診所官網</h3>
-                  <p>永保青春的秘密，從粹究開始</p>
-                  <ul>
-                    <li>網頁設計</li>
-                    <li>響應式設計</li>
-                    <li>ＷordPress</li>
-                  </ul>
-                </div>
-                <div class="btn">
-                  <a href=""
-                    >完整介紹
-                    <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-                  </a>
-                </div>
-              </div>
+          <div class="introduction-sm">
+            <div class="content">
+              <h3>理財APP</h3>
+              <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
+              <ul>
+                <li>APP設計</li>
+                <li>iOS</li>
+                <li>React</li>
+              </ul>
+            </div>
+            <div class="btn">
+              <a href=""
+                >完整介紹
+                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+              </a>
             </div>
           </div>
-          <div class="art-content-sm">
-            <div class="art-content-sm-bg">
-              <img src="./img/homepage-work3-sm.png" alt="homepage-work3" />
-            </div>
-            <div class="introduction-sm">
+        </div>
+
+        <div class="art">
+          <div class="art-content container">
+            <img src="./img/homepage-work3.png" alt="homepage-work3" />
+            <div class="introduction">
               <div class="content">
                 <h3>醫美診所官網</h3>
                 <p>永保青春的秘密，從粹究開始</p>
@@ -203,112 +177,134 @@
             </div>
           </div>
         </div>
-      </section>
-
-      <section class="services">
-        <div class="title-lg">
-          <h2>
-            <span class="deco-line deco-left"></span>服務項目<span
-              class="deco-line deco-right"
-            ></span>
-          </h2>
-        </div>
-        <ul class="content container">
-          <li>
-            <img src="./img/service-item-visual.svg" alt="平面設計" />
-            <h3>平面設計</h3>
-          </li>
-          <li>
-            <img src="./img/service-item-ui.svg" alt="UI 設計" />
-            <h3>UI 設計</h3>
-          </li>
-          <li>
-            <img src="./img/service-item-html&css.svg" alt="切版服務" />
-            <h3>切版服務</h3>
-          </li>
-          <li>
-            <img src="./img/service-item-front-end.svg" alt="前端開發" />
-            <h3>前端開發</h3>
-          </li>
-        </ul>
-        <div class="contrat">
-          <h3>想要合作或瞭解更多？</h3>
-          <div class="btn">
-            <a href=""
-              >詳細內容與合作流程
-              <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-            </a>
+        <div class="art-content-sm">
+          <div class="art-content-sm-bg">
+            <img src="./img/homepage-work3-sm.png" alt="homepage-work3" />
+          </div>
+          <div class="introduction-sm">
+            <div class="content">
+              <h3>醫美診所官網</h3>
+              <p>永保青春的秘密，從粹究開始</p>
+              <ul>
+                <li>網頁設計</li>
+                <li>響應式設計</li>
+                <li>ＷordPress</li>
+              </ul>
+            </div>
+            <div class="btn">
+              <a href=""
+                >完整介紹
+                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+              </a>
+            </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="articles">
-        <div class="title-lg">
-          <h2>
-            <span class="deco-line deco-left"></span>精選文章<span
-              class="deco-line deco-right"
-            ></span>
-          </h2>
+    <section class="services">
+      <div class="title-lg">
+        <h2>
+          <span class="deco-line deco-left"></span>服務項目<span
+            class="deco-line deco-right"
+          ></span>
+        </h2>
+      </div>
+      <ul class="content container">
+        <li>
+          <img src="./img/service-item-visual.svg" alt="平面設計" />
+          <h3>平面設計</h3>
+        </li>
+        <li>
+          <img src="./img/service-item-ui.svg" alt="UI 設計" />
+          <h3>UI 設計</h3>
+        </li>
+        <li>
+          <img src="./img/service-item-html&css.svg" alt="切版服務" />
+          <h3>切版服務</h3>
+        </li>
+        <li>
+          <img src="./img/service-item-front-end.svg" alt="前端開發" />
+          <h3>前端開發</h3>
+        </li>
+      </ul>
+      <div class="contrat">
+        <h3>想要合作或瞭解更多？</h3>
+        <div class="btn">
+          <a href=""
+            >詳細內容與合作流程
+            <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+          </a>
         </div>
-        <ul class="articles-content container">
-          <li>
-            <img src="./img/article-image1.png" alt="article1" />
-            <h3>Vision Pro 登場！Vision Pro UI/UX 設計重點大公開 (上)</h3>
-            <div class="tag-date">
-              <p class="tag">UI/UX 新知</p>
-              <p>2024/02/10</p>
-            </div>
-          </li>
-          <li>
-            <img src="./img/article-image2.png" alt="article2" />
-            <h3>給設計師和工程師的 Figma-Dev Mode 開發模式使用指南 (下)</h3>
-            <div class="tag-date">
-              <p class="tag">UI/UX 新知</p>
-              <p>2023/11/20</p>
-            </div>
-          </li>
-          <li>
-            <img src="./img/article-image3.png" alt="article3" />
-            <h3>Vision Pro 登場！Vision Pro UI/UX 設計重點大公開 (上)</h3>
-            <div class="tag-date">
-              <p class="tag">UI/UX 新知</p>
-              <p>2023/10/18</p>
-            </div>
-          </li>
-        </ul>
-        <ul class="slide-point">
-          <li class="black"></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </section>
+      </div>
+    </section>
 
-      <footer class="footer-lg">
-        <div class="footer-content container">
-          <div class="footer-contrat">
-            <img src="./img/logo.svg" alt="logo" />
-            <h3>若有數位產品設計和開發相關問題</h3>
-            <h3>歡迎填寫表單，或直接與我聯絡！</h3>
-            <p>service@hexschool.com</p>
+    <section class="articles">
+      <div class="title-lg">
+        <h2>
+          <span class="deco-line deco-left"></span>精選文章<span
+            class="deco-line deco-right"
+          ></span>
+        </h2>
+      </div>
+      <ul class="articles-content container">
+        <li>
+          <img src="./img/article-image1.png" alt="article1" />
+          <h3>Vision Pro 登場！Vision Pro UI/UX 設計重點大公開 (上)</h3>
+          <div class="tag-date">
+            <p class="tag">UI/UX 新知</p>
+            <p>2024/02/10</p>
           </div>
-          <ul class="footer-link">
-            <li class="black">
-              <img src="./img/list.svg" alt="" /><a href="#">填寫表單</a>
-            </li>
-            <li>
-              <img src="./img/instagram.svg" alt="list" /><a href="#"
-                >hexschool_demo</a
-              >
-            </li>
-            <li>
-              <img src="./img/facebook.svg" alt="" /><a href="#">hexschoolTW</a>
-            </li>
-          </ul>
+        </li>
+        <li>
+          <img src="./img/article-image2.png" alt="article2" />
+          <h3>給設計師和工程師的 Figma-Dev Mode 開發模式使用指南 (下)</h3>
+          <div class="tag-date">
+            <p class="tag">UI/UX 新知</p>
+            <p>2023/11/20</p>
+          </div>
+        </li>
+        <li>
+          <img src="./img/article-image3.png" alt="article3" />
+          <h3>Vision Pro 登場！Vision Pro UI/UX 設計重點大公開 (上)</h3>
+          <div class="tag-date">
+            <p class="tag">UI/UX 新知</p>
+            <p>2023/10/18</p>
+          </div>
+        </li>
+      </ul>
+      <ul class="slide-point">
+        <li class="black"></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-content container">
+        <div class="footer-contrat">
+          <img src="./img/logo.svg" alt="logo" />
+          <h3>若有數位產品設計和開發相關問題</h3>
+          <h3>歡迎填寫表單，或直接與我聯絡！</h3>
+          <p>service@hexschool.com</p>
         </div>
-      </footer>
-    </div>
+        <ul class="footer-link">
+          <li class="black">
+            <img src="./img/list.svg" alt="" /><a href="#">填寫表單</a>
+          </li>
+          <li>
+            <img src="./img/instagram.svg" alt="list" /><a href="#"
+              >hexschool_demo</a
+            >
+          </li>
+          <li>
+            <img src="./img/facebook.svg" alt="" /><a href="#">hexschoolTW</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="./all.js"></script>
