--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>體驗營-任務二切版</title>
+
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,8 +16,12 @@
       <div class="header-content container">
         <a href="#"><img src="./img/logo.svg" class="logo" alt="logo" /></a>
         <div class="hamburger">
-          <img src="./img/menu.svg" class="btn active" alt="開啟" />
-          <img src="./img/close.svg" class="btn close" alt="關閉" />
+          <span class="material-symbols-outlined btn active hamburger-icon">
+            menu
+          </span>
+          <span class="material-symbols-outlined btn close hamburger-icon">
+            close
+          </span>
         </div>
         <ul class="header-nav">
           <li><a class="active" href="#">首頁</a></li>
@@ -47,9 +52,21 @@
             / APP DESIGN
           </p>
           <ul>
-            <li><img src="./img/instagram.svg" alt="IG" /></li>
-            <li><img src="./img/facebook.svg" alt="FB" /></li>
-            <li><img src="./img/youtube.svg" alt="YT" /></li>
+            <li>
+              <a href="https://www.instagram.com/"
+                ><img src="./img/instagram.svg" alt="IG"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img src="./img/facebook.svg" alt="FB"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/"
+                ><img src="./img/youtube.svg" alt="YT"
+              /></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -66,9 +83,11 @@
         </h2>
       </div>
       <div class="works-content">
-        <div class="travel">
-          <div class="travel-content container">
-            <img src="./img/homepage-work1.png" alt="homepage-work1" />
+        <div class="travel work-item-background mask100">
+          <div class="travel-content container work-item-layout">
+            <div class="travel-img work-item-img-container">
+              <img src="./img/homepage-work1.png" alt="homepage-work1" />
+            </div>
             <div class="introduction">
               <div class="content">
                 <h3>星際旅行訂票平台</h3>
@@ -82,38 +101,18 @@
               <div class="btn">
                 <a href=""
                   >完整介紹
-                  <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+                  <span class="material-symbols-outlined arrow_forward-icon">
+                    arrow_forward
+                  </span>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="travel-content-sm">
-          <div class="travel-content-sm-bg">
-            <img src="./img/homepage-work1-sm.png" alt="homepage-work1" />
-          </div>
 
-          <div class="introduction-sm">
-            <div class="content">
-              <h3>星際旅行訂票平台</h3>
-              <p>悠遊宇宙的夢想，從這裡開始實現</p>
-              <ul>
-                <li>網頁設計</li>
-                <li>響應式設計</li>
-                <li>Bootstrap</li>
-              </ul>
-            </div>
-            <div class="btn">
-              <a href=""
-                >完整介紹
-                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="app">
-          <div class="app-content">
+        <div class="app work-item-background mask45">
+          <div class="app-content container work-item-layout">
+            <div class="app-img work-item-img-container"></div>
             <div class="introduction">
               <div class="content">
                 <h3>理財APP</h3>
@@ -127,37 +126,20 @@
               <div class="btn">
                 <a href=""
                   >完整介紹
-                  <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+                  <span class="material-symbols-outlined arrow_forward-icon">
+                    arrow_forward
+                  </span>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="app-content-sm">
-          <div class="app-content-sm-bg"></div>
 
-          <div class="introduction-sm">
-            <div class="content">
-              <h3>理財APP</h3>
-              <p>連動帳戶與行動支付，讓 AI 提供您最好的理財建議</p>
-              <ul>
-                <li>APP設計</li>
-                <li>iOS</li>
-                <li>React</li>
-              </ul>
+        <div class="art work-item-background mask100">
+          <div class="art-content container work-item-layout">
+            <div class="art-img work-item-img-container">
+              <img src="./img/homepage-work3.png" alt="homepage-work3" />
             </div>
-            <div class="btn">
-              <a href=""
-                >完整介紹
-                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="art">
-          <div class="art-content container">
-            <img src="./img/homepage-work3.png" alt="homepage-work3" />
             <div class="introduction">
               <div class="content">
                 <h3>醫美診所官網</h3>
@@ -171,31 +153,11 @@
               <div class="btn">
                 <a href=""
                   >完整介紹
-                  <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+                  <span class="material-symbols-outlined arrow_forward-icon">
+                    arrow_forward
+                  </span>
                 </a>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="art-content-sm">
-          <div class="art-content-sm-bg">
-            <img src="./img/homepage-work3-sm.png" alt="homepage-work3" />
-          </div>
-          <div class="introduction-sm">
-            <div class="content">
-              <h3>醫美診所官網</h3>
-              <p>永保青春的秘密，從粹究開始</p>
-              <ul>
-                <li>網頁設計</li>
-                <li>響應式設計</li>
-                <li>ＷordPress</li>
-              </ul>
-            </div>
-            <div class="btn">
-              <a href=""
-                >完整介紹
-                <img src="./img/arrow_forward.svg" alt="arrow_forward" />
-              </a>
             </div>
           </div>
         </div>
@@ -213,19 +175,19 @@
       <ul class="content container">
         <li>
           <img src="./img/service-item-visual.svg" alt="平面設計" />
-          <h3>平面設計</h3>
+          <p>平面設計</p>
         </li>
         <li>
           <img src="./img/service-item-ui.svg" alt="UI 設計" />
-          <h3>UI 設計</h3>
+          <p>UI 設計</p>
         </li>
         <li>
           <img src="./img/service-item-html&css.svg" alt="切版服務" />
-          <h3>切版服務</h3>
+          <p>切版服務</p>
         </li>
         <li>
           <img src="./img/service-item-front-end.svg" alt="前端開發" />
-          <h3>前端開發</h3>
+          <p>前端開發</p>
         </li>
       </ul>
       <div class="contrat">
@@ -233,7 +195,9 @@
         <div class="btn">
           <a href=""
             >詳細內容與合作流程
-            <img src="./img/arrow_forward.svg" alt="arrow_forward" />
+            <span class="material-symbols-outlined arrow_forward-icon">
+              arrow_forward
+            </span>
           </a>
         </div>
       </div>
@@ -286,9 +250,9 @@
       <div class="footer-content container">
         <div class="footer-contrat">
           <img src="./img/logo.svg" alt="logo" />
-          <h3>若有數位產品設計和開發相關問題</h3>
-          <h3>歡迎填寫表單，或直接與我聯絡！</h3>
-          <p>service@hexschool.com</p>
+          <p>若有數位產品設計和開發相關問題</p>
+          <p>歡迎填寫表單，或直接與我聯絡！</p>
+          <a href="mailto:service@hexschool.com">service@hexschool.com</a>
         </div>
         <ul class="footer-link">
           <li class="black">
